# fasttext-pure-rs

./: .gitattributes  .gitignore  .markdownlint-cli2.cjs  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: predict.rs
src/: args.rs  dictionary.rs  error.rs  io.rs  lib.rs  matrix.rs  model.rs  quantized_matrix.rs
tests/: benchmark.rs  dictionary.rs  model_loading.rs  prediction_bin.rs  prediction_ftz.rs  quantizer.rs
